fix overflow

--- a/style.css
+++ b/style.css
@@ -1026,7 +1026,7 @@ h2.heading {
   bottom: 0;
   left: 0;
   right: 0;
-  overflow: scroll;
+  overflow-y: scroll;
   z-index: 1;
 }
 
